Fixed photo and video gallery alignment

--- a/src/pages/Videos.css
+++ b/src/pages/Videos.css
@@ -1,4 +1,7 @@
 .all-videos {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     align-content: center;
     justify-content: center;
     width: 30vw;
